Refactored Controllers and Services for ProjectCards and ProjectTechs