@@ -10,12 +10,12 @@ import com.david.dev.portfolio_be.repository.ProjectCardTechRepository;
 import com.david.dev.portfolio_be.repository.ProjectTechRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ProjectCardService {
@@ -23,71 +23,65 @@ public class ProjectCardService {
     private final ProjectCardTechRepository projectCardTechRepository;
     private final ProjectTechRepository projectTechRepository;
     private final ProjectCardRepository projectCardRepository;
-    private final ProjectCardMapper projectCardMapper;
 
-    public ProjectCardService(ProjectCardTechRepository projectCardTechRepository, ProjectTechRepository projectTechRepository, ProjectCardRepository projectCardRepository, ProjectCardMapper projectCardMapper) {
+    public ProjectCardService(ProjectCardTechRepository projectCardTechRepository, ProjectTechRepository projectTechRepository, ProjectCardRepository projectCardRepository) {
         this.projectCardTechRepository = projectCardTechRepository;
         this.projectTechRepository = projectTechRepository;
         this.projectCardRepository = projectCardRepository;
-        this.projectCardMapper = projectCardMapper;
     }
 
-    public Collection<ProjectCardDTO> getAllProjectCards() {
+    public List<ProjectCardDTO> getAllProjectCards() {
         return projectCardRepository.findAll().stream()
-                .map(projectCardMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(ProjectCardMapper::toDTO)
+                .toList();
     }
 
-    public ProjectCard createProjectCard(ProjectCard projectCard, List<String> techStacks) {
-        // Process each tech stack first
-        for (String techName : techStacks) {
-            // Find or create the ProjectTech
-            ProjectTech projectTech = projectTechRepository.findByName(techName)
-                    .orElseGet(() -> projectTechRepository.save(
-                            ProjectTech.builder().name(techName).build()
-                    ));
+    public ProjectCardDTO createProjectCard(String title, String description, MultipartFile image, List<String> techStacks) throws IOException {
+        ProjectCard projectCard = ProjectCard.builder()
+                        .title(title)
+                        .description(description)
+                        .image(image != null ? image.getBytes() : null)
+                        .build();
 
-            // Use the entity's addTech() to build the relationship
-            projectCard.addTech(projectTech);
-        }
+        techStacks.stream()
+                .map(name -> projectTechRepository.findByName(name)
+                        .orElseGet(() -> projectTechRepository.save(
+                                ProjectTech.builder().name(name).build()
+                        )))
+                .forEach(projectCard::addTech);
 
-        // Single save cascades to ProjectCardTechs (no need for manual ProjectCardTechRepository.save)
-        ProjectCard savedCard = projectCardRepository.save(projectCard);
-
-        return savedCard;
+        return ProjectCardMapper.toDTO(projectCardRepository.save(projectCard));
     }
 
-    public ProjectCard updateProjectCard(UUID id, ProjectCardDTO projectCardDTO) throws IOException {
+    public ProjectCardDTO updateProjectCard(UUID id, ProjectCardDTO projectCardDTO) throws RuntimeException {
         ProjectCard existingProjectCard = projectCardRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("ProjectCard not found with id: " + id));
 
-        if (projectCardDTO.getTitle() != null) {
+        if (projectCardDTO.getTitle() != null)
             existingProjectCard.setTitle(projectCardDTO.getTitle());
-        }
-        if (projectCardDTO.getDescription() != null) {
+        if (projectCardDTO.getDescription() != null)
             existingProjectCard.setDescription(projectCardDTO.getDescription());
-        }
-        if (projectCardDTO.getBase64Image() != null && !projectCardDTO.getBase64Image().isEmpty()) {
+        if (projectCardDTO.getBase64Image() != null && !projectCardDTO.getBase64Image().isEmpty())
             existingProjectCard.setImage(projectCardDTO.getBase64Image().getBytes());
-        }
 
-        return projectCardRepository.save(existingProjectCard);
+        return ProjectCardMapper.toDTO(projectCardRepository.save(existingProjectCard));
     }
 
     @Transactional
-    public void deleteProjectCard(UUID id) {
-        ProjectCard projectCard = projectCardRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("ProjectCard not found with id: " + id));
+    public boolean deleteProjectCard(UUID id) {
+        Optional<ProjectCard> optional = projectCardRepository.findById(id);
+        if (optional.isEmpty()) return false;
 
+        ProjectCard projectCard = optional.get();
         List<ProjectCardTech> relatedTechs = projectCardTechRepository.findAllByProjectCard(projectCard);
 
-        //check if it only appears once
         projectCardRepository.deleteById(id);
-        for(ProjectCardTech cardTech : relatedTechs) {
-            if (projectCardTechRepository.findAllByProjectTech(cardTech.getProjectTech()).size() == 0) {
-                projectTechRepository.deleteById(cardTech.getProjectTech().getId());
-            }
-        }
-    }
 
+        relatedTechs.stream()
+                .map(ProjectCardTech::getProjectTech)
+                .filter(tech -> projectCardTechRepository.findAllByProjectTech(tech).isEmpty())
+                .forEach(tech -> projectTechRepository.deleteById(tech.getId()));
+
+        return true;
+    }
 }
